analysis/scRNA_seq/02_Integration/bash_scripts/logs/scvi_integration.scvi_best_integration10_3_128_5000.122466_permissive.out
** Using custom python for this environment
python=3.10.12 scvi=1.1.2 torch=2.3.0+cu121
  File "/nfs/team298/sm54/BoneAtlasProject/src/integration/10_3_batch_correction_scvi_haem_best_integration_stroma_filtered_permissive_doublet_removed.py", line 17
    adata=sc.read_h5ad('/nfs/team298/sm54/BoneAtlasProject/data/bone_haem_compartment/bone_haem_atlas_with_filtered_stroma_PERMISSIVE_DOUBLET_REMOVAL.h5ad'))
                                                                                                                                                            ^
SyntaxError: unmatched ')'

------------------------------------------------------------
Sender: LSF System <lsfadmin@farm22-gpu0301>
Subject: Job 122466: <module load cellgen/conda; module load cellgen/scvi;               python -u /nfs/team298/sm54/BoneAtlasProject/src/integration/10_3_batch_correction_scvi_haem_best_integration_stroma_filtered_permissive_doublet_removed.py                  --n_latent 10                 --n_layers 3                 --n_hidden 128                 --n_hvg 5000> in cluster <farm22> Exited

Job <module load cellgen/conda; module load cellgen/scvi;               python -u /nfs/team298/sm54/BoneAtlasProject/src/integration/10_3_batch_correction_scvi_haem_best_integration_stroma_filtered_permissive_doublet_removed.py                  --n_latent 10                 --n_layers 3                 --n_hidden 128                 --n_hvg 5000> was submitted from host <farm22-head1> by user <sm54> in cluster <farm22> at Sun Sep 21 18:59:22 2025
Job was executed on host(s) <8*farm22-gpu0301>, in queue <gpu-normal>, as user <sm54> in cluster <farm22> at Sun Sep 21 18:59:22 2025
</nfs/users/nfs_s/sm54> was used as the home directory.
</nfs/team298/sm54/BoneAtlasProject/src/integration/bash_scripts> was used as the working directory.
Started at Sun Sep 21 18:59:22 2025
Terminated at Sun Sep 21 18:59:39 2025
Results reported at Sun Sep 21 18:59:39 2025

Your job looked like:

------------------------------------------------------------
# LSBATCH: User input
module load cellgen/conda; module load cellgen/scvi;               python -u /nfs/team298/sm54/BoneAtlasProject/src/integration/10_3_batch_correction_scvi_haem_best_integration_stroma_filtered_permissive_doublet_removed.py                  --n_latent 10                 --n_layers 3                 --n_hidden 128                 --n_hvg 5000
------------------------------------------------------------

Exited with exit code 1.

Resource usage summary:

    CPU time :                                   1.18 sec.
    Max Memory :                                 18 MB
    Average Memory :                             18.00 MB
    Total Requested Memory :                     100000.00 MB
    Delta Memory :                               99982.00 MB
    Max Swap :                                   -
    Max Processes :                              5
    Max Threads :                                15
    Run time :                                   8 sec.
    Turnaround time :                            17 sec.

The output (if any) is above this job summary.

